ingress/alb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  namespace: frontend
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:058264269986:certificate/1e70fc29-43e8-4029-9e9b-b0c3fd06e3de
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /user/
        pathType: Prefix
        backend:
          service:
            name: user-svc
            port:
              number: 80
      - path: /item/
        pathType: Prefix
        backend:
          service:
            name: item-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main-svc
            port:
              number: 80
